src/cli/snapshots/xmark__cli__summary__tests__allow_space_in_link_destination.snap
---
source: src/cli/summary.rs
expression: got
---
- chapter:
    name: test1
    location: "./test link1.md"
  nested_items: []
  section_number:
    - 1
- chapter:
    name: test2
    location: "./test link2.md"
  nested_items: []
  section_number:
    - 2
