src/cli/snapshots/xmark__cli__summary__tests__keep_numbering_after_separator.snap
---
source: src/cli/summary.rs
expression: got
---
- chapter:
    name: First
    location: "./first.md"
  nested_items: []
  section_number:
    - 1
- chapter:
    name: Second
    location: "./second.md"
  nested_items: []
  section_number:
    - 2
- chapter:
    name: Third
    location: "./third.md"
  nested_items: []
  section_number:
    - 3
