src/cli/snapshots/xmark__cli__summary__tests__parse_numbered_chapters_separated_by_comment.snap
---
source: src/cli/summary.rs
expression: got
---
- chapter:
    name: First
    location: "./first.md"
  nested_items: []
  section_number:
    - 1
- chapter:
    name: Second
    location: "./second.md"
  nested_items: []
  section_number:
    - 2
